--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/cors": "^2.8.17",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "http-status": "^1.7.4",
+    "zod": "^3.23.8"
   }
 }
