--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
   "dependencies": {
     "@prisma/client": "^5.17.0",
     "@types/cors": "^2.8.17",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "zod": "^3.23.8"
   }
